--- a/templates/main/base.html
+++ b/templates/main/base.html
@@ -4,14 +4,49 @@
 <head>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     {% block header %}
     <!-- header 삽입 부분 -->
+    <style>
+        .navbar-default{
+            background-color: ;
+
+        }
+        .navbar-nav{
+            color: white;
+        }
+    </style>
     {% endblock %}
 </head>
 
 <body style="background-color: #F6F6F6;">
     {% block contents %}
     <!-- body -->
+    <nav class="navbar navbar-yellowgreen">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#"><img src="cbnu.png" width="50" /></a>
+                <a class="navbar-brand" href="#">CBNU SELAB</a>
+            </div>
+
+            <div class="collapse navbar-collapse" id="myNavbar">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#">Introduction</a></li>
+                    <li><a href="#">People</a></li>
+                    <li><a href="#">Courses</a></li>
+                    <li><a href="#">Notice</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <h3>hi</h3>
 
     {% endblock %}
