--- a/templates/main/home.html
+++ b/templates/main/home.html
@@ -53,7 +53,7 @@
         </div>
         <div class="col-sm-2">
             <br>
-            <h1 class="text-left" style="color: white; font-size:15px;"><FONT face="PlayfairDisplay-Regular">We are a group of top SW engineers<br>to develop quality software
+            <h1 class="text-left" style="color: white; font-size:15px;"><FONT face="PlayfairDisplay-Regular">We are a group of top SW Engineers<br>to develop quality software
                     and services as the discipline of developing and applying systematic and quantitative engineering
                     to software development, operation,<br>and management activities.</FONT></h1>
         </div>
