--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,10 +1,11 @@
 #bg_img {
+    width: 100%;
+    height: 1100px;
     background: fixed;
     background-image: url(../images/cbnu_bg2.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-
 }
 
 @font-face{
