--- a/templates/base.html
+++ b/templates/base.html
@@ -2,9 +2,10 @@
 {% load static %}
 <html>
 <head>
+
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel = "stylesheet" href="{% static 'css/base.css' %}?ver=1.3">
+    <link rel = "stylesheet" href="{% static 'css/base.css' %}?ver=1.6">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.6/umd/popper.min.js"></script>
@@ -16,7 +17,7 @@
     </style>
     <script type="text/javascript">
         $(function(){
-            $("#cbnu_logo").click(function(){
+            $("#mail_logo").click(function(){
                 var tempElem = document.createElement('textarea');
                 tempElem.value = 'jehong@chungbuk.ac.kr';
                 document.body.appendChild(tempElem);
@@ -33,50 +34,65 @@
     {% endblock %}
 </head>
 
-<body id="bg_img">
-    <!-- rgba는 배경색만 opacity 효과를 주기 위한 것으로 아래는 0.7의 강도 -->
-    <div class="navbar" style="background-color:rgba( 255, 255, 255, 0.75 ); color:grey;">
-        <a class="mr-auto font-weight-bold cbnu_logo" style="color:grey;" href="https://chungbuk.ac.kr"><img src="../static/images/CBNU_logo2.png" width="60px" /></a>
-        <a id="cbnu_logo" class="ml-auto cbnu_logo" href=""><span class="fas fa-envelope"></span> jehong@chungbuk.ac.kr</a>
-    </div>
-
-    <nav class="bg-light navbar-light navbar navbar-expand-lg navbar-white sticky-top" style="background-color:rgba( 255, 255, 255, 0.65 ) !important;">
-        <a class="mr-auto" href=""><img src="{% static 'images/SELab_logo2-removed.png' %}" alt="Logo" width="60" /></a>
-        <a class="logoName font-weight-bold" href="#">Software Engineering Lab</a>
-        <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-
-        <div class="collapse navbar-collapse" id="collapsibleNavbar">
-            <ul class="nav navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Introduction</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">People</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Courses</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Notice</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Research</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Publication</a>
-                </li>
-            </ul>
+<body>
+    <div id="bg_img">
+        <!-- rgba는 배경색만 opacity 효과를 주기 위한 것으로 아래는 0.7의 강도 -->
+        <div class="navbar" style="background-color:rgba( 255, 255, 255, 0.73 ); color:grey;">
+            <a class="mr-auto font-weight-bold cbnu_logo" style="color:grey;" href="https://chungbuk.ac.kr"><img src="../static/images/CBNU_logo2.png" width="60px" /></a>
+            <a id="mail_logo" class="ml-auto cbnu_logo" href=""><span class="fas fa-envelope"></span> jehong@chungbuk.ac.kr</a>
         </div>
-    </nav>
+
+        <nav class="bg-light navbar-light navbar navbar-expand-lg navbar-white sticky-top" style="background-color:rgba( 255, 255, 255, 0.68 ) !important;">
+            <a class="mr-auto" href=""><img src="{% static 'images/SELab_logo2-removed.png' %}" alt="Logo" width="60" /></a>
+            <a class="logoName" href="/"><font face="">Software Engineering Lab</font></a>
+            <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
 
+            <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                <ul class="nav navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link"  href="/">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link"  href="/people">People</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link"  href="/research">Research</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link"  href="/publication">Publication</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link"  href="/notice">Notice</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
 
-    {% block contents %}
-    <!-- body -->
-    {% endblock %}
+
+        {% block contents %}
+
+        <!-- body contents -->
+        {% endblock %}
+    </div> <!-- 와, 이게 되네 -->
+
+    <div class="container-fluid row" style="background-color: #7D7D7D;">
+        <br>
+        <div class="col-sm-2"></div>
+        <div class="col-sm-8" style="padding-top:30px; padding-bottom:30px; color:white;">
+            <a>Copyright © CBNU SELab. All Rights Reserved.</a><br>
+            <a>Address: (S4-1)-303(3F), Chungdae-ro 1, Seowon-gu, Cheongju, Chungbuk, 28644, Republic of Korea</a><br>
+            <a>주소: (28644) 충북 청주시 서원구 충대로 1, 충북대학교 전자정보대학 소프트웨어학과 S4-1동(전자정보 3관) 303호</a><br>
+            <a>Tel) Fax)</a><br>
+            <a>Developer e-mail: takurway@gmail.com</a>
+        </div>
+        <div class="col-sm-2">
+
+        </div>
+        <br>
+    </div>
 
     {% if messages %}
     {% for message in messages %}
