Delete some files

--- a/templates/main/publication.html
+++ b/templates/main/publication.html
@@ -10,6 +10,7 @@
     {% block header %}
     <link rel = "stylesheet" href="{% static 'css/publication.css' %}?ver=1.1">
     <style>
+
     </style>
 
     {% endblock %}
@@ -18,18 +19,8 @@
 
 <body>
 {% block contents %}
-
-    <div class="container-fluid text-center">p</div>
-    <div class="container-fluid text-center">u</div>
-    <div class="container-fluid text-center">b</div>
-    <div class="container-fluid text-center">l</div>
-    <div class="container-fluid text-center">i</div>
-    <div class="container-fluid text-center">c</div>
-    <div class="container-fluid text-center">a</div>
-    <div class="container-fluid text-center">t</div>
-    <div class="container-fluid text-center">i</div>
-    <div class="container-fluid text-center">o</div>
-    <div class="container-fluid text-center">n</div>
+    <div class="container-fluid text-center"><a style="font-size: 50px;">Publication</a></div>
+    <div>hi</div>
 {% endblock %}
 </body>
 
